Do not build URI request part by hand
With built URI, caches could not be logged anymore as the "?" part
was correctly escaped by the URI library.

This is a temporary fix, as the whole host/path/params handling should
be properly using URI instead of strings.